tests/NormalTests/paczka1/small_fuzzy/17198481.err
Error in line 1: nyE3skPwX A480 17,3
Error in line 2: nyE3skPwX S568 98,0
